Fix bugs in IAA computation, add visualization

--- a/factgenie/notebooks/inter_annotator_agreement.ipynb
+++ b/factgenie/notebooks/inter_annotator_agreement.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install pygamma-agreement cylp pandas numpy tqdm scipy"
+    "%pip install pygamma-agreement cylp pandas numpy tqdm scipy matplotlib"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,11 +168,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_gamma(span_index, dissim, precision_level=\"low\"):\n",
+    "from IPython import display\n",
+    "\n",
+    "\n",
+    "def compute_gamma(span_index, dissim):\n",
     "    gamma_scores = []\n",
     "    running_avg = 0\n",
     "    \n",
@@ -182,13 +185,17 @@
     "    # Create progress bar\n",
     "    pbar = tqdm(total=len(groups), desc='Computing gamma score')\n",
     "    \n",
+    "\n",
+    "    display.display(f\"Visualization of the best alignment\", display_id='vis_lbl')\n",
+    "    display.display(f\"Waiting for the first example...\", display_id='vis')\n",
+    "    \n",
     "    for idx, (i, group) in enumerate(groups, 1):\n",
     "        try:\n",
     "            # Add each annotation to continuum\n",
     "            continuum = pa.Continuum()\n",
     "\n",
     "            if group.annotator_group_id.unique().shape[0] < 2:\n",
-    "                print(f\"Skipping example {idx} due to insufficient annotators\")\n",
+    "                # One of the annotators did not add any annotation -> gamma = 0\n",
     "                gamma_scores.append(0.0)\n",
     "                running_avg = np.mean(gamma_scores)\n",
     "                pbar.set_postfix({'avg_gamma': f'{running_avg:.3f}'})\n",
@@ -208,8 +215,13 @@
     "\n",
     "            # Temporarily increase logging level to suppress output\n",
     "            logging.getLogger().setLevel(logging.WARNING)\n",
-    "            gamma_results = continuum.compute_gamma(dissim, soft=True, precision_level=precision_level)\n",
+    "            gamma_results = continuum.compute_gamma(dissim, soft=True)\n",
     "            logging.getLogger().setLevel(logging.INFO)\n",
+    "\n",
+    "            # Show the best alignment for every 10th example\n",
+    "            if idx % 10 == 1:\n",
+    "                display.update_display(f\"Visualization of the best alignment for example {idx}\", display_id='vis_lbl')\n",
+    "                display.update_display(gamma_results.best_alignment, display_id='vis')\n",
     "\n",
     "            gamma_scores.append(gamma_results.gamma)\n",
     "            running_avg = np.mean(gamma_scores)\n",
@@ -231,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,20 +252,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Higher precision_level will result in more accurate gamma scores, but will take longer to compute\n",
-    "precision_level = \"low\"\n",
-    "\n",
     "# `alpha`: coefficient weighting the *positional* dissimilarity value, defaults to 1\n",
     "alpha = 1\n",
     "# `beta`: coefficient weighting the *categorical* dissimilarity value, defaults to 1\n",
     "beta = 1\n",
     "# `delta_empty`: empty dissimilarity value, defaults to 1\n",
     "dissim = pa.CombinedCategoricalDissimilarity(delta_empty=1, alpha=1, beta=1)\n",
-    "gamma = compute_gamma(gamma_spans, dissim, precision_level=precision_level)\n",
+    "gamma = compute_gamma(gamma_spans, dissim)\n",
     "\n",
     "print(f\"Gamma score: {gamma:.3f}\")"
    ]
