Add cli method for computing iaa

--- a/factgenie/notebooks/inter_annotator_agreement.ipynb
+++ b/factgenie/notebooks/inter_annotator_agreement.ipynb
@@ -258,10 +258,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gamma_spans = pd.read_csv(f\"{csv_dir}/gamma_spans.csv\")\n",
+    "span_index = pd.read_csv(f\"{csv_dir}/span_index.csv\")\n",
     "\n",
     "\n",
-    "annotator_groups = gamma_spans.annotator_group_id.unique()\n",
+    "annotator_groups = span_index.annotator_group_id.unique()\n",
     "# you can define the list of relevant groups (2 or more) here\n",
     "# groups = [\"group1\", \"group2\", ...]\n",
     "annotator_groups = ['highlights-a-longer-anngroup-12', 'highlights-b-longer-anngroup-12']\n",
@@ -271,7 +271,7 @@
     "    print(\"==============================================\")\n",
     "    print(f\"WARNING: more than 5 groups detected, computation may be slow\")\n",
     "\n",
-    "gamma_spans = gamma_spans[gamma_spans[\"annotator_group_id\"].isin(annotator_groups)]\n",
+    "span_index = span_index[span_index[\"annotator_group_id\"].isin(annotator_groups)]\n",
     "\n",
     "\n",
     "# `alpha`: coefficient weighting the *positional* dissimilarity value, defaults to 1\n",
@@ -279,8 +279,10 @@
     "# `beta`: coefficient weighting the *categorical* dissimilarity value, defaults to 1\n",
     "beta = 1\n",
     "# `delta_empty`: empty dissimilarity value, defaults to 1\n",
-    "dissim = pa.CombinedCategoricalDissimilarity(delta_empty=1, alpha=1, beta=1)\n",
-    "gamma = compute_gamma(gamma_spans, dissim)\n",
+    "delta_empty = 1\n",
+    "\n",
+    "dissim = pa.CombinedCategoricalDissimilarity(delta_empty=delta_empty, alpha=alpha, beta=beta)\n",
+    "gamma = compute_gamma(span_index, dissim)\n",
     "\n",
     "print(f\"==============================================\")\n",
     "print(f\"Gamma score: {gamma:.3f}\")\n",
